--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Terra Colony</title>
 </head>
+<script src="js/config.js"></script>
 <script src="js/main.js"></script>
-<script src="js/manager.js"></script>
+<script src="js/colony.js"></script>
+<script src="js/colonist.js"></script>
+<script src="js/core.js"></script>
 <script src="js/p5.min.js"></script>
 <body>
 </body>
